<?xml version="1.0" encoding="utf-8"?> 
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:key="flight_option_preference" 
    android:title="@string/prefTitle" 
    android:summary="@string/prefSummary">
  	<ListPreference 
    	android:key="@string/selected_flight_sort_option" 
    	android:title="@string/listTitle" 
    	android:summary="@string/listSummary" 
    	android:entries="@array/flight_sort_options" 
    	android:entryValues="@array/flight_sort_options_values" 
    	android:dialogTitle="@string/dialogTitle" 
    	android:defaultValue="@string/flight_sort_option_default_value" /> 
	<CheckBoxPreference 
	        android:key="show_airline_column_pref" 
	        android:title="Airline" 
	        android:summary="Show Airline column" /> 
	<CheckBoxPreference 
	        android:key="show_departure_column_pref" 
	        android:title="Departure" 
	        android:summary="Show Departure column" /> 
	<CheckBoxPreference 
	        android:key="show_arrival_column_pref" 
	        android:title="Arrival" 
	        android:summary="Show Arrival column" /> 
	 <CheckBoxPreference 
	        android:key="show_total_travel_time_column_pref" 
	        android:title="Total Travel Time" 
	        android:summary="Show Total Travel Time column" /> 
	<CheckBoxPreference 
	        android:key="show_price_column_pref" 
	        android:title="Price" 
	        android:summary="Show Price column" />
	<PreferenceScreen 
    	android:title="Subscreen" 
    	android:summary="This’s Subscreen"> 
		<EditTextPreference 
            	android:key="package_name_preference" 
            	android:title="Set Package Name" 
            	android:summary="Set the package name for generated code" 
            	android:dialogTitle="Package Name" /> 
		<RingtonePreference 
        		android:key="ring_tone_pref" 
        		android:title="Set Ringtone Preference" 
        		android:showSilent="true" 
        		android:ringtoneType="ringtone" 
        		android:summary="Set Ringtone" /> 
	</PreferenceScreen>
</PreferenceScreen> 
